Services page content changed

--- a/initial_site/services.html
+++ b/initial_site/services.html
@@ -124,159 +124,185 @@
           <ul class="nav nav-pills flex-column" id="myTab" role="tablist">
             <li class="nav-item">
               <a class="nav-link active" id="tab1-tab" data-toggle="tab" href="#tab1" role="tab" aria-controls="tab1"
-                aria-selected="true">AWARENESS ON DOOR TO DOOR COLLECTION AND TRANSFER OF WASTE</a>
+                aria-selected="true">Enhancing Door-to-Door Waste Collection and Transfer</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="tab2-tab" data-toggle="tab" href="#tab2" role="tab" aria-controls="tab2"
-                aria-selected="false">WASTE SEGREGATION AWARENESS CAMPAIGN</a>
+                aria-selected="false">Promoting Waste Segregation at the Source</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="tab3-tab" data-toggle="tab" href="#tab3" role="tab" aria-controls="tab3"
-                aria-selected="false">PUBLIC AWARENESS PROGRAMS</a>
+                aria-selected="false">Raising Public Awareness on Waste Management</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="tab4-tab" data-toggle="tab" href="#tab4" role="tab" aria-controls="tab4"
-                aria-selected="false">STREET SWEEPING AND RIVER CLEANING CAMPAIGN</a>
+                aria-selected="false">Organizing Street Sweeping and River Cleanup Campaigns</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="tab5-tab" data-toggle="tab" href="#tab5" role="tab" aria-controls="tab5"
-                aria-selected="false">COMMUNITY MOBILIZATION</a>
+                aria-selected="false">Community Engagement for Environmental Improvement</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="tab6-tab" data-toggle="tab" href="#tab6" role="tab" aria-controls="tab6"
-                aria-selected="false">BUSH REMOVING</a>
+                aria-selected="false">Roadside Bush Clearing Initiatives</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="tab7-tab" data-toggle="tab" href="#tab7" role="tab" aria-controls="tab7"
-                aria-selected="false">PUBLICATION</a>
+                aria-selected="false">Annual Publications and Environmental Outreach</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="tab8-tab" data-toggle="tab" href="#tab8" role="tab" aria-controls="tab8"
-                aria-selected="false">TRAINING</a>
+                aria-selected="false">Waste Management and Composting Training Programs</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="tab9-tab" data-toggle="tab" href="#tab9" role="tab" aria-controls="tab9"
-                aria-selected="false">COMPOSTING</a>
+                aria-selected="false">Supporting Community Composting Initiatives</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="tab10-tab" data-toggle="tab" href="#tab10" role="tab" aria-controls="tab10"
-                aria-selected="false">MARKETING OF COMPOST BINS</a>
+                aria-selected="false">Promoting and Distributing Compost Bins</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="tab11-tab" data-toggle="tab" href="#tab11" role="tab" aria-controls="tab11"
-                aria-selected="false">GREENERY DEVELOPMENT</a>
+                aria-selected="false">Fostering Green Spaces and Urban Afforestation</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="tab12-tab" data-toggle="tab" href="#tab12" role="tab" aria-controls="tab12"
-                aria-selected="false">PAPER RECYCLING</a>
+                aria-selected="false">Recycling Waste Paper into Useful Products</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="tab13-tab" data-toggle="tab" href="#tab13" role="tab" aria-controls="tab13"
-                aria-selected="false">HEALTH SERVICES</a>
+                aria-selected="false">Providing Health Services to Waste Workers and Marginalized Communities</a>
             </li>
           </ul>
         </div>
         <div class="col-md-8">
           <div class="tab-content" id="myTabContent">
             <div class="tab-pane fade show active scrollto" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
-              <h2>AWARENESS ON DOOR TO DOOR COLLECTION AND TRANSFER OF WASTE</h2>
+              <h2>Enhancing Door-to-Door Waste Collection and Transfer</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
-                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
-                blanditiis voluptates vel ipsam? Facilis, earum! Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Neque, eveniet earum. Sed
-                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
-                blanditiis voluptates vel ipsam? Facilis, earum! Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Neque, eveniet earum. Sed
-                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
-                blanditiis voluptates vel ipsam? Facilis, earum! Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Neque, eveniet earum. Sed
-                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
-                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+              <p class="service-info">NEPCEMAC actively engages with both the community and waste collection sectors to
+                enhance the efficiency of waste collection and transportation. By raising awareness and promoting best
+                practices, we aim to create a cleaner environment and a more effective waste management system. Our goal
+                is to ensure that every household plays a role in maintaining cleanliness through proper waste disposal.
+              </p>
             </div>
             <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
-              <h2>WASTE SEGREGATION AWARENESS CAMPAIGN</h2>
+              <h2>Promoting Waste Segregation at the Source</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
-                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
-                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+              <p class="service-info">For over 15 years, NEPCEMAC has been promoting waste segregation at the source,
+                particularly in household
+                kitchens. Currently, around 50,000 families in various municipalities across Kathmandu Valley segregate
+                waste
+                into biodegradable and non-biodegradable categories using green and red buckets. Our ongoing efforts aim
+                to
+                expand this initiative to reach 300,000 families within the next five years, fostering a culture of
+                responsible
+                waste management in more communities.</p>
             </div>
             <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
-              <h2>PUBLIC AWARENESS PROGRAMS</h2>
+              <h2>Raising Public Awareness on Waste Management</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
-                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
-                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+              <p class="service-info">NEPCEMAC leads advocacy efforts on solid waste management through various
+                programs, including orientations,
+                trainings, mass campaigns, exhibitions, and street performances. These activities, combined with
+                documentaries,
+                songs, and pamphlets, have proven effective in sensitizing the public and encouraging active
+                participation in
+                reducing environmental pollution. Annually, hundreds of these programs engage communities and inspire
+                positive
+                change.</p>
             </div>
             <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
-              <h2>STREET SWEEPING AND RIVER CLEANING CAMPAIGN</h2>
+              <h2>Organizing Street Sweeping and River Cleanup Campaigns</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
-                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
-                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+              <p class="service-info">Our street sweeping campaigns cover all areas where door-to-door waste collection
+                services are provided.
+                Additionally, NEPCEMAC organizes riverbank cleaning initiatives, ensuring that these vital ecosystems
+                remain
+                free from waste and pollution. These efforts contribute to a cleaner, healthier environment for all.</p>
             </div>
             <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
-              <h2>COMMUNITY MOBILIZATION</h2>
+              <h2>Community Engagement for Environmental Improvement</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
-                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
-                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+              <p class="service-info">NEPCEMAC mobilizes communities to address local environmental issues, engaging
+                residents in activities that
+                target pollution reduction and environmental preservation. By involving community members directly, we
+                foster a
+                sense of ownership and responsibility for the local environment.</p>
             </div>
             <div class="tab-pane fade" id="tab6" role="tabpanel" aria-labelledby="tab6-tab">
-              <h2>BUSH REMOVING</h2>
+              <h2>Roadside Bush Clearing Initiatives</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
-                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
-                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+              <p class="service-info">During the summer months, NEPCEMAC conducts campaigns to remove unwanted bushes
+                along roadsides. This helps
+                maintain clean and safe public spaces while preventing overgrowth that could contribute to environmental
+                issues.</p>
             </div>
             <div class="tab-pane fade" id="tab7" role="tabpanel" aria-labelledby="tab7-tab">
-              <h2>PUBLICATION</h2>
+              <h2>Annual Publications and Environmental Outreach</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
-                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
-                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+              <p class="service-info">NEPCEMAC publishes "NEPCEMAC SANDESH" annually, providing valuable information on
+                environmental issues and waste
+                management to stakeholders, communities, and other interested parties. Our publications also include
+                training
+                manuals, pamphlets, bulletins, and articles in various media, ensuring widespread dissemination of
+                knowledge and
+                best practices.</p>
             </div>
             <div class="tab-pane fade" id="tab8" role="tabpanel" aria-labelledby="tab8-tab">
-              <h2>TRAINING</h2>
+              <h2>Waste Management and Composting Training Programs</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
-                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
-                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+              <p class="service-info">NEPCEMAC offers training programs on waste management and composting, benefiting
+                over 20,000 students, 8,000
+                women, and 5,000 community leaders. These trainings empower participants with the knowledge and skills
+                needed to
+                contribute to a sustainable environment in their communities.</p>
             </div>
             <div class="tab-pane fade" id="tab9" role="tabpanel" aria-labelledby="tab9-tab">
-              <h2>COMPOSTING</h2>
+              <h2>Supporting Community Composting Initiatives</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
-                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
-                blanditiis voluptates vel ipsam? Facilis, earum!</p>
-            </div>
-            <div class="tab-pane fade" id="tab10" role="tabpanel" aria-labelledby="tab10-tab">
-              <h2>MARKETING OF COMPOST BINS</h2>
-              <img src="\assets\images\projects\5.png" class="img-services">
-              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
-                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
-                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+              <p class="service-info">We promote composting by installing composting plants at several sites, including
+                Central Zoo, Chalnakhel,
+                Radheradhe, and Lapuli. The compost manure produced is sold to farmers and households, providing a
+                source of
+                income for NEPCEMAC. As an incentive, households that segregate their kitchen waste receive 5 kilograms
+                of
+                compost manure annually for free.</p>
             </div>
             <div class="tab-pane fade" id="tab11" role="tabpanel" aria-labelledby="tab11-tab">
-              <h2>GREENERY DEVELOPMENT</h2>
+              <h2>Promoting and Distributing Compost Bins</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
-                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
-                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+              <p class="service-info">NEPCEMAC promotes vermicomposting through the distribution of wooden vermin boxes
+                and affordable plastic compost
+                bins to households. These products enable communities to practice composting at home, reducing waste and
+                contributing to soil fertility.</p>
+            </div>
+            <div class="tab-pane fade" id="tab10" role="tabpanel" aria-labelledby="tab10-tab">
+              <h2>Fostering Green Spaces and Urban Afforestation</h2>
+              <img src="\assets\images\projects\5.png" class="img-services">
+              <p class="service-info">Our greenery development initiatives aim to enhance the aesthetic value of
+                Kathmandu Valley through plantation
+                and afforestation programs. By promoting greenery, NEPCEMAC contributes to a healthier and more visually
+                pleasing environment for all.</p>
             </div>
             <div class="tab-pane fade" id="tab12" role="tabpanel" aria-labelledby="tab12-tab">
-              <h2>PAPER RECYCLING</h2>
+              <h2>Recycling Waste Paper into Useful Products</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
-                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
-                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+              <p class="service-info">At our recycling plant in Gokarna, Kathmandu, NEPCEMAC transforms waste paper into
+                useful products like
+                envelopes, tea mats, and file holders. This initiative, supported by the Japanese Embassy, not only
+                reduces
+                waste but also creates valuable products for the market.</p>
             </div>
             <div class="tab-pane fade" id="tab13" role="tabpanel" aria-labelledby="tab13-tab">
-              <h2>HEALTH SERVICES</h2>
+              <h2>Providing Health Services to Waste Workers and Marginalized Communities</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class="service-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eveniet earum. Sed
-                accusantium eligendi molestiae quo hic velit nobis et, tempora placeat ratione rem
-                blanditiis voluptates vel ipsam? Facilis, earum!</p>
+              <p class="service-info">NEPCEMAC provides essential health services to waste workers, their families, and
+                marginalized communities
+                through regular health checkup camps. These services ensure that those involved in waste management and
+                those in
+                need have access to necessary medical care.</p>
             </div>
           </div>
         </div>
