Services names and descriptions updated

--- a/initial_site/index.html
+++ b/initial_site/index.html
@@ -612,7 +612,7 @@
             <div class="service-item">
               <img src="assets/images/scroll/1.png" alt="">
               <div class="down-content">
-                <h4>AWARENESS ON DOOR TO DOOR COLLECTION AND TRANSFER OF WASTE</h4>
+                <h4>Enhancing Door-to-Door Waste Collection and Transfer</h4>
                 <!-- <p>Programs that promote segregation of waste at the source of production (household kitchens) and educate
                 people about the benefits of separating biodegradable and non-biodegradable waste</p> -->
                 <!-- <a href="" class="filled-button">Read More</a> -->
@@ -625,7 +625,7 @@
             <div class="service-item">
               <img src="assets/images/scroll/1.png" alt="">
               <div class="down-content">
-                <h4>WASTE SEGREGATION AWARENESS CAMPAIGN</h4>
+                <h4>Promoting Waste Segregation at the Source</h4>
                 <!-- <p>Programs to raise awareness about the proper collection and transportation of waste, to improve the
                   waste management process.</p> -->
                 <!-- <a href="" class="filled-button">Read More</a> -->
@@ -638,7 +638,7 @@
             <div class="service-item">
               <img src="assets/images/scroll/1.png" alt="">
               <div class="down-content">
-                <h4>PUBLIC AWARENESS PROGRAMS</h4>
+                <h4>Raising Public Awareness on Waste Management</h4>
                 <!-- <p>Programs that publish a yearly newsletter 'NEPCEMAC SANDESH' and other publications to inform
                   issues and waste management.</p>
                   stakeholders, community, as well as minded organizations and service holders regarding environmental -->
@@ -652,7 +652,7 @@
             <div class="service-item">
               <img src="assets/images/scroll/1.png" alt="">
               <div class="down-content">
-                <h4>STREET SWEEPING AND RIVER CLEANING CAMPAIGN</h4>
+                <h4>Organizing Street Sweeping and River Cleanup Campaigns</h4>
                 <!-- <p>Programs that aim to educate and raise awareness about solid waste management issues through various
                   shows, video documentaries and the use of pamphlets.</p>
                   methods such as orientations, trainings, mass campaigns, exhibitions, street dramas, songs, poetry, -->
@@ -666,7 +666,7 @@
             <div class="service-item">
               <img src="assets/images/scroll/1.png" alt="">
               <div class="down-content">
-                <h4>COMMUNITY MOBILIZATION</h4>
+                <h4>Community Engagement for Environmental Improvement</h4>
                 <!-- <p>Programs that organize cleaning of streets and river banks in areas where door-to-door waste collection
                   services are delivered.</p> -->
                 <!-- <a href="" class="filled-button">Read More</a> -->
@@ -679,7 +679,7 @@
             <div class="service-item">
               <img src="assets/images/scroll/1.png" alt="">
               <div class="down-content">
-                <h4>BUSH REMOVING</h4>
+                <h4>Roadside Bush Clearing Initiatives</h4>
                 <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
                   local place.</p> -->
                 <!-- <a href="" class="filled-button">Read More</a> -->
@@ -692,7 +692,7 @@
             <div class="service-item">
               <img src="assets/images/scroll/1.png" alt="">
               <div class="down-content">
-                <h4>PUBLICATION</h4>
+                <h4>Annual Publications and Environmental Outreach</h4>
                 <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
                   local place.</p> -->
                 <!-- <a href="" class="filled-button">Read More</a> -->
@@ -705,7 +705,7 @@
             <div class="service-item">
               <img src="assets/images/scroll/1.png" alt="">
               <div class="down-content">
-                <h4>TRAINING</h4>
+                <h4>Waste Management and Composting Training Programs</h4>
                 <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
                   local place.</p> -->
                 <!-- <a href="" class="filled-button">Read More</a> -->
@@ -718,7 +718,7 @@
             <div class="service-item">
               <img src="assets/images/scroll/1.png" alt="">
               <div class="down-content">
-                <h4>COMPOSTING</h4>
+                <h4>Supporting Community Composting Initiatives</h4>
                 <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
                   local place.</p> -->
                 <!-- <a href="" class="filled-button">Read More</a> -->
@@ -731,7 +731,7 @@
             <div class="service-item">
               <img src="assets/images/scroll/1.png" alt="">
               <div class="down-content">
-                <h4>MARKETING OF COMPOST BINS</h4>
+                <h4>Fostering Green Spaces and Urban Afforestation</h4>
                 <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
                   local place.</p> -->
                 <!-- <a href="" class="filled-button">Read More</a> -->
@@ -744,7 +744,7 @@
             <div class="service-item">
               <img src="assets/images/scroll/1.png" alt="">
               <div class="down-content">
-                <h4>GREENERY DEVELOPMENT</h4>
+                <h4>Recycling Waste Paper into Useful Products</h4>
                 <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
                   local place.</p> -->
                 <!-- <a href="" class="filled-button">Read More</a> -->
@@ -757,7 +757,7 @@
             <div class="service-item">
               <img src="assets/images/scroll/1.png" alt="">
               <div class="down-content">
-                <h4>PAPER RECYCLING</h4>
+                <h4>Providing Health Services to Waste Workers and Marginalized Communities</h4>
                 <!-- <p>Programs that mobilize the community to take active part in improving environmental pollution at the
                   local place.</p> -->
                 <!-- <a href="" class="filled-button">Read More</a> -->
