--- a/initial_site/services.html
+++ b/initial_site/services.html
@@ -191,118 +191,94 @@
               <h2>Promoting Waste Segregation at the Source</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
               <p class="service-info">For over 15 years, NEPCEMAC has been promoting waste segregation at the source,
-                particularly in household
-                kitchens. Currently, around 50,000 families in various municipalities across Kathmandu Valley segregate
-                waste
-                into biodegradable and non-biodegradable categories using green and red buckets. Our ongoing efforts aim
-                to
-                expand this initiative to reach 300,000 families within the next five years, fostering a culture of
-                responsible
-                waste management in more communities.</p>
+                particularly in household kitchens. Currently, around 50,000 families in various municipalities across
+                Kathmandu Valley segregate waste into biodegradable and non-biodegradable categories using green and red
+                buckets. Our ongoing efforts aim to expand this initiative to reach 300,000 families within the next
+                five years, fostering a culture of responsible waste management in more communities.</p>
             </div>
             <div class="tab-pane fade" id="tab3" role="tabpanel" aria-labelledby="tab3-tab">
               <h2>Raising Public Awareness on Waste Management</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
               <p class="service-info">NEPCEMAC leads advocacy efforts on solid waste management through various
-                programs, including orientations,
-                trainings, mass campaigns, exhibitions, and street performances. These activities, combined with
-                documentaries,
-                songs, and pamphlets, have proven effective in sensitizing the public and encouraging active
-                participation in
-                reducing environmental pollution. Annually, hundreds of these programs engage communities and inspire
-                positive
-                change.</p>
+                programs, including orientations, trainings, mass campaigns, exhibitions, and street performances. These
+                activities, combined with documentaries, songs, and pamphlets, have proven effective in sensitizing the
+                public and encouraging active participation in reducing environmental pollution. Annually, hundreds of
+                these programs engage communities and inspire positive change.</p>
             </div>
             <div class="tab-pane fade" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
               <h2>Organizing Street Sweeping and River Cleanup Campaigns</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
-              <p class="service-info">Our street sweeping campaigns cover all areas where door-to-door waste collection
-                services are provided.
-                Additionally, NEPCEMAC organizes riverbank cleaning initiatives, ensuring that these vital ecosystems
-                remain
-                free from waste and pollution. These efforts contribute to a cleaner, healthier environment for all.</p>
+              <p class="service-info">Our street sweeping campaigns cover all areas where door-to-door waste
+                collectionservices are provided. Additionally, NEPCEMAC organizes riverbank cleaning initiatives,
+                ensuring that these vital ecosystems remain free from waste and pollution. These efforts contribute to a
+                cleaner, healthier environment for all.</p>
             </div>
             <div class="tab-pane fade" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
               <h2>Community Engagement for Environmental Improvement</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
               <p class="service-info">NEPCEMAC mobilizes communities to address local environmental issues, engaging
-                residents in activities that
-                target pollution reduction and environmental preservation. By involving community members directly, we
-                foster a
-                sense of ownership and responsibility for the local environment.</p>
+                residents in activities that target pollution reduction and environmental preservation. By involving
+                community members directly, we foster a sense of ownership and responsibility for the local environment.
+              </p>
             </div>
             <div class="tab-pane fade" id="tab6" role="tabpanel" aria-labelledby="tab6-tab">
               <h2>Roadside Bush Clearing Initiatives</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
               <p class="service-info">During the summer months, NEPCEMAC conducts campaigns to remove unwanted bushes
-                along roadsides. This helps
-                maintain clean and safe public spaces while preventing overgrowth that could contribute to environmental
-                issues.</p>
+                along roadsides. This helps maintain clean and safe public spaces while preventing overgrowth that could
+                contribute to environmental issues.</p>
             </div>
             <div class="tab-pane fade" id="tab7" role="tabpanel" aria-labelledby="tab7-tab">
               <h2>Annual Publications and Environmental Outreach</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
               <p class="service-info">NEPCEMAC publishes "NEPCEMAC SANDESH" annually, providing valuable information on
-                environmental issues and waste
-                management to stakeholders, communities, and other interested parties. Our publications also include
-                training
-                manuals, pamphlets, bulletins, and articles in various media, ensuring widespread dissemination of
-                knowledge and
-                best practices.</p>
+                environmental issues and waste management to stakeholders, communities, and other interested parties.
+                Our publications also include training manuals, pamphlets, bulletins, and articles in various media,
+                ensuring widespread dissemination of knowledge and best practices.</p>
             </div>
             <div class="tab-pane fade" id="tab8" role="tabpanel" aria-labelledby="tab8-tab">
               <h2>Waste Management and Composting Training Programs</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
               <p class="service-info">NEPCEMAC offers training programs on waste management and composting, benefiting
-                over 20,000 students, 8,000
-                women, and 5,000 community leaders. These trainings empower participants with the knowledge and skills
-                needed to
-                contribute to a sustainable environment in their communities.</p>
+                over 20,000 students, 8,000 women, and 5,000 community leaders. These trainings empower participants
+                with the knowledge and skills needed to contribute to a sustainable environment in their communities.
+              </p>
             </div>
             <div class="tab-pane fade" id="tab9" role="tabpanel" aria-labelledby="tab9-tab">
               <h2>Supporting Community Composting Initiatives</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
               <p class="service-info">We promote composting by installing composting plants at several sites, including
-                Central Zoo, Chalnakhel,
-                Radheradhe, and Lapuli. The compost manure produced is sold to farmers and households, providing a
-                source of
-                income for NEPCEMAC. As an incentive, households that segregate their kitchen waste receive 5 kilograms
-                of
-                compost manure annually for free.</p>
+                Central Zoo, Chalnakhel, Radheradhe, and Lapuli. The compost manure produced is sold to farmers and
+                households, providing a source of income for NEPCEMAC. As an incentive, households that segregate their
+                kitchen waste receive 5 kilograms of compost manure annually for free.</p>
             </div>
             <div class="tab-pane fade" id="tab11" role="tabpanel" aria-labelledby="tab11-tab">
               <h2>Promoting and Distributing Compost Bins</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
               <p class="service-info">NEPCEMAC promotes vermicomposting through the distribution of wooden vermin boxes
-                and affordable plastic compost
-                bins to households. These products enable communities to practice composting at home, reducing waste and
-                contributing to soil fertility.</p>
+                and affordable plastic compost bins to households. These products enable communities to practice
+                composting at home, reducing waste and contributing to soil fertility.</p>
             </div>
             <div class="tab-pane fade" id="tab10" role="tabpanel" aria-labelledby="tab10-tab">
               <h2>Fostering Green Spaces and Urban Afforestation</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
               <p class="service-info">Our greenery development initiatives aim to enhance the aesthetic value of
-                Kathmandu Valley through plantation
-                and afforestation programs. By promoting greenery, NEPCEMAC contributes to a healthier and more visually
-                pleasing environment for all.</p>
+                Kathmandu Valley through plantation and afforestation programs. By promoting greenery, NEPCEMAC
+                contributes to a healthier and more visually pleasing environment for all.</p>
             </div>
             <div class="tab-pane fade" id="tab12" role="tabpanel" aria-labelledby="tab12-tab">
               <h2>Recycling Waste Paper into Useful Products</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
               <p class="service-info">At our recycling plant in Gokarna, Kathmandu, NEPCEMAC transforms waste paper into
-                useful products like
-                envelopes, tea mats, and file holders. This initiative, supported by the Japanese Embassy, not only
-                reduces
-                waste but also creates valuable products for the market.</p>
+                useful products like envelopes, tea mats, and file holders. This initiative, supported by the Japanese
+                Embassy, not only reduces waste but also creates valuable products for the market.</p>
             </div>
             <div class="tab-pane fade" id="tab13" role="tabpanel" aria-labelledby="tab13-tab">
               <h2>Providing Health Services to Waste Workers and Marginalized Communities</h2>
               <img src="\assets\images\projects\5.png" class="img-services">
               <p class="service-info">NEPCEMAC provides essential health services to waste workers, their families, and
-                marginalized communities
-                through regular health checkup camps. These services ensure that those involved in waste management and
-                those in
-                need have access to necessary medical care.</p>
+                marginalized communities through regular health checkup camps. These services ensure that those involved
+                in waste management and those in need have access to necessary medical care.</p>
             </div>
           </div>
         </div>
