--- a/initial_site/about.html
+++ b/initial_site/about.html
@@ -116,39 +116,34 @@
   </header>
 
   <!-- Page Content -->
-  <div class="page-heading header-text">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1>About Us</h1>
-          <span>We have over 20 years of experience</span>
-        </div>
-      </div>
+  <div class="page-heading header-text" style="height: 30px;">
+    <div class="section-heading">
+      <h2 style="color: white;">About <em> NEPCEMAC</em></h2>
+      <span>Information about our organization</span>
     </div>
   </div>
-
-  <div class="more-info about-info">
+  <div class="more-info" id="about">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="more-info-content">
             <div class="row">
-              <div class="col-md-6 align-self-center">
-                <div class="right-content">
-                  <span>our solid background on finance</span>
-                  <h2>Get to know about <em>our company</em></h2>
-                  <p>Fusce nec ultrices lectus. Duis nec scelerisque risus. Ut id tempor turpis, ac dignissim ipsum.
-                    Nulla ullamcorper, ipsum vel condimentum congue, mi odio vehicula tellus, sit amet malesuada justo
-                    sem.
-                    <br><br>Pellentesque in sagittis lacus, vel auctor sem. Quisque eu quam eleifend, ullamcorper dui
-                    nec, luctus quam.
-                  </p>
-                  <a href="" class="filled-button">Read More</a>
-                </div>
+              <div class="col-md-7" style="display: flex">
+                <div id="video-light" class="video-box align-self-center"
+                  style="width: 100%; height: 90%; border-radius: 20px;"></div>
+                <!-- <div class="left-image">
+                  <img src="assets/images/more-info.jpg" alt="">
+                </div> -->
               </div>
-              <div class="col-md-6">
-                <div class="left-image">
-                  <img src="assets/images/about-image.jpg" alt="">
+              <div class="col-md-5 align-self-center">
+                <div class="right-content">
+                  <span>Who we are</span>
+                  <h2>Get to know about <em>our organization</em></h2>
+                  <p>Curabitur pulvinar sem a leo tempus facilisis. Sed non sagittis neque. Nulla conse quat tellus
+                    nibh, id molestie felis sagittis ut. Nam ullamcorper tempus ipsum in cursus<br><br>Praes end at
+                    dictum metus. Morbi id hendrerit lectus, nec dapibus ex. Etiam ipsum quam, luctus eu egestas eget,
+                    tincidunt</p>
+                  <a href="https://www.google.com" class="filled-button">Read More</a>
                 </div>
               </div>
             </div>
@@ -158,7 +153,54 @@
     </div>
   </div>
 
-  <div class="team">
+  <div class="fun-facts">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="left-content">
+            <span>Lorem ipsum dolor sit amet</span>
+            <h2>Our solutions for your <br><em>Solid Waste Management</em></h2>
+            <p>Pellentesque ultrices at turpis in vestibulum. Aenean pretium elit nec congue elementum. Nulla luctus
+              laoreet porta. Maecenas at nisi tempus, porta metus vitae, faucibus augue.
+              <br><br>Fusce et venenatis ex. Quisque varius, velit quis dictum sagittis, odio velit molestie nunc, ut
+              posuere ante tortor ut neque.
+            </p>
+            <a href="" class="filled-button">Read More</a>
+          </div>
+        </div>
+        <div class="col-md-6 align-self-center">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="count-area-content">
+                <div class="count-digit">1997</div>
+                <div class="count-title">Founded</div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="count-area-content">
+                <div class="count-digit">30</div>
+                <div class="count-title">Members</div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="count-area-content">
+                <div class="count-digit">40</div>
+                <div class="count-title">Initiatives</div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="count-area-content">
+                <div class="count-digit">9</div>
+                <div class="count-title">Funds collected</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- <div class="team">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -199,6 +241,81 @@
         </div>
       </div>
     </div>
+  </div> -->
+
+  <div class="more-info" id="letters">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="section-heading">
+            <h2> <em>Our </em> Teams</h2>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-12">
+                <ul class="nav nav-pills mb-3 nav-justified" id="pills-tab" role="tablist"
+                  style="font-size: 20px;background-color: #d2d2d2; margin-top: -70px;">
+                  <li class="nav-item">
+                    <a class="nav-link active" id="pills-chairman-tab" data-toggle="pill" href="#pills-home" role="tab"
+                      aria-controls="pills-home" aria-selected="true">Board of Directors</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" id="pills-program_cordinator-tab" data-toggle="pill" href="#pills-profile"
+                      role="tab" aria-controls="pills-profile" aria-selected="false">Advisory Team</a>
+                  </li>
+                </ul>
+                <div class="tab-content" id="pills-tabContent">
+                  <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
+                    aria-labelledby="pills-chairman-tab">
+                    <div class="more-info-content">
+                      <div class="row">
+                        <div class="col-md-3" style="background-color: red;">
+                          <div style="height: 10cm;display: flex;">
+                            <img src="./assets/images/boards/rajkumar.png" style="margin: auto; height: 8cm;width: 6.5cm;margin-left: 0px;">
+                          </div>
+                        </div>
+                        <div class="col-md-3" style="background-color: blue;">
+                          <div style="height: 10cm;display: flex;">
+                            <img src="./assets/images/boards/rajkumar.png" style="margin: auto; height: 8cm;width: 6.5cm;margin-left: 0px;">
+                          </div>
+                        </div>
+                        <div class="col-md-3" style="background-color: yellow;">
+                          <div style="height: 10cm;display: flex;">
+                            <img src="./assets/images/boards/rajkumar.png" style="margin: auto; height: 8cm;width: 6.5cm;margin-left: 0px;">
+                          </div>
+                        </div>
+                        <div class="col-md-3" style="background-color: green;">
+                          <div style="height: 10cm;display: flex;">
+                            <img src="./assets/images/boards/rajkumar.png" style="margin: auto; height: 8cm;width: 6.5cm;margin-left: 0px;">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tab-pane fade" id="pills-profile" role="tabpanel"
+                    aria-labelledby="pills-program_cordinator-tab">
+                    <div class="more-info-content">
+                      <div class="row">
+                        <div class="col-md-5" style="display: flex">
+                          <div style="object-fit: contain;display: flex;align-items: center;">
+                            <img src="./assets/images/program_coordinator.png"
+                              style="height:auto;width: 100%;border-radius: 20px;">
+                          </div>
+                          <!-- <div class="left-image">
+                            <img src="assets/images/more-info.jpg" alt="">
+                          </div> -->
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   </div>
 
   <div class="fun-facts">
